[gd_scene load_steps=12 format=3 uid="uid://clrkundq7q3p5"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_gqxx6"]
[ext_resource type="Texture2D" uid="uid://cqlisgl1q4t6" path="res://Addons/Free/Artes_jogo/bg_gameover.png" id="2_5w6pj"]
[ext_resource type="Theme" uid="uid://c2cr74a1jy35o" path="res://sair_btn.tres" id="2_s1pb5"]
[ext_resource type="Texture2D" uid="uid://basb6kkqeuh2u" path="res://Addons/Free/Artes_jogo/G_O.png" id="3_fnvbh"]
[ext_resource type="Theme" uid="uid://c107bj6m3piu5" path="res://inicio.tres" id="3_qpyfi"]
[ext_resource type="AudioStream" uid="uid://de6ei0we22c1d" path="res://Addons/Free/Sons/Gameover2.mp3" id="6_ug33j"]
[ext_resource type="AudioStream" uid="uid://coj1gr4fggeap" path="res://Addons/Free/Sons/Trocadebot√£o.mp3" id="7_8pkmc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayfnd"]

[sub_resource type="Animation" id="Animation_l15fi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -91)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("g-o:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4atli"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("g-o:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.8, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ssfi7"]
_data = {
"RESET": SubResource("Animation_l15fi"),
"fade_in": SubResource("Animation_4atli")
}

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqxx6")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -91.0
offset_right = 1152.0
offset_bottom = 655.496
texture = ExtResource("2_5w6pj")
expand_mode = 5

[node name="g-o" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 301.0
offset_top = 129.0
offset_right = 501.0
offset_bottom = 229.0
scale = Vector2(3, 3)
texture = ExtResource("3_fnvbh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 65.0
offset_right = 119.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_inicio" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_qpyfi")
text = "                         "

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_ayfnd")

[node name="Button_sair" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_s1pb5")
text = "                         "

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ssfi7")
}
autoplay = "fade_in"

[node name="som_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ug33j")
volume_db = 5.0
autoplay = true

[node name="troca_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8pkmc")
volume_db = -15.0

[connection signal="focus_exited" from="HBoxContainer/Button_inicio" to="." method="_on_button_inicio_focus_exited"]
[connection signal="mouse_exited" from="HBoxContainer/Button_inicio" to="." method="_on_button_inicio_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button_inicio" to="." method="_on_button_inicio_pressed"]
[connection signal="focus_exited" from="HBoxContainer/Button_sair" to="." method="_on_button_sair_focus_exited"]
[connection signal="mouse_exited" from="HBoxContainer/Button_sair" to="." method="_on_button_sair_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button_sair" to="." method="_on_button_sair_pressed"]
